--- a/security.html
+++ b/security.html
@@ -83,7 +83,7 @@
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AthenPolloLLC/743999698402657-sr-cyber-security-principal-engineer'>AthenPollo LLC Sr Cyber Security Principal Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AthenPolloLLC/743999698402657-sr-cyber-security-principal-engineer'>AthenPollo LLC Sr Cyber Security Principal Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -151,11 +151,11 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/S4mobGscTx/Security-Operations-Engineer'>Security Operations Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/S4mobGscTx/Security-Operations-Engineer'>Security Operations Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Kirkland, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kennasecurity/06410394-4596-4aad-8835-45834a4ed855'>Kenna Security - Sales Engineer - Boston</a></h5> 
+<h5><a href='https://jobs.lever.co/kennasecurity/06410394-4596-4aad-8835-45834a4ed855'>Kenna Security - Sales Engineer - Boston</a></h5> 
 <p><span class="badge badge-light">Boston  Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -263,7 +263,7 @@
 <p><span class="badge badge-light">France  France  Paris, France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://careercyresconsulting.recruitee.com/o/systems-security-engineer-wmd'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercyresconsulting.recruitee.com/o/systems-security-engineer-wmd'>
       Systems Security Engineer (w/m/d) - CYRES Consulting Services GmbH
     </a></h5> 
 <p><span class="badge badge-light">Riga, Latvia</span></p>
@@ -285,7 +285,7 @@
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kennasecurity/7ae56805-4223-4223-9093-2e331b965611'>Kenna Security - Sales Engineer - EMEA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kennasecurity/7ae56805-4223-4223-9093-2e331b965611'>Kenna Security - Sales Engineer - EMEA</a></h5> 
 <p><span class="badge badge-light">London  San Francisco Chicago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -330,7 +330,7 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oeenbfwK&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nUdjlMw2'>Herjavec Group Careers - Senior Security Engineer, Qradar/Splunk</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oeenbfwK&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nUdjlMw2'>Herjavec Group Careers - Senior Security Engineer, Qradar/Splunk</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -392,7 +392,7 @@ Laboratories.</p>
 <p>Oct 15, 2019 ... The role would suit an experienced analyst having previously worked as a web 
 application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MarinerPartnersInc/743999697475092-security-analyst-soc-bilingual-french-and-english-'>Mariner Partners Inc. Security Analyst - SOC (Bilingual - French and English) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MarinerPartnersInc/743999697475092-security-analyst-soc-bilingual-french-and-english-'>Mariner Partners Inc. Security Analyst - SOC (Bilingual - French and English) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada  Canada</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -400,7 +400,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orL0afw6&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nOudkMw6'>Tenable Careers - Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orL0afw6&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nOudkMw6'>Tenable Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
