--- a/web-developer.html
+++ b/web-developer.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://careers.jobscore.com/careers/dae/jobs/web-application-developer-ts-sci-with-polygraph-bf6nraCM4r6BkYaICoXfFy'>Web Application Developer - TS/SCI with Polygraph #0442 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/circleci/jobs/4497096002'>Job Application for Senior Engineer - Web Development & Optimization at CircleCI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/circleci/jobs/4497096002'>Job Application for Senior Engineer - Web Development & Optimization at CircleCI</a></h5> 
 <p><span class="badge badge-light">United States Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://riafinancial.referrals.selectminds.com/jobs/web-developer-1647'>Web Developer - Ria Careers</a></h5> 
+<h5><a href='https://riafinancial.referrals.selectminds.com/jobs/web-developer-1647'>Web Developer - Ria Careers</a></h5> 
 <p><span class="badge badge-light">United States United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -240,7 +240,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://apiax.join.com/jobs/458971-front-end-web-developer'>Job @ Apiax (Lisbon): Front-End Web Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apiax.join.com/jobs/458971-front-end-web-developer'>Job @ Apiax (Lisbon): Front-End Web Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -262,7 +262,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qneaVfwq&k=Job&j=olp7afwL&__jvst=Employee&__jvsd=slkU7hws&__jvsc=Twitter&bid=n2XolMwZ'>HelpSystems Careers - Web Development Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qneaVfwq&k=Job&j=olp7afwL&__jvst=Employee&__jvsd=slkU7hws&__jvsc=Twitter&bid=n2XolMwZ'>HelpSystems Careers - Web Development Intern</a></h5> 
 <p><span class="badge badge-light">Eden Prairie, Minnesota</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -296,7 +296,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://enmacc.join.com/jobs/457555-full-stack-web-developer-m-f-d'>Job @ Enmacc (Munich): Full Stack Web Developer (m... | JOIN</a></h5> 
+<h5><a href='https://enmacc.join.com/jobs/457555-full-stack-web-developer-m-f-d'>Job @ Enmacc (Munich): Full Stack Web Developer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -345,7 +345,7 @@ Develop process requirements and implement product development and release
 <p>3 days ago ... STAT (www.statnews.com) is a cutting-edge media company that is committed to 
 finding and telling compelling stories about health, medicine, and scientific?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/umlaut/job/obYWafwZ'>umlaut North America Careers - Front-End Web Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/umlaut/job/obYWafwZ'>umlaut North America Careers - Front-End Web Developer</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -455,7 +455,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999697932447-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999697932447-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">A Coru?a, Spain</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
